--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "phpstan/extension-installer": "^1.1",
         "phpstan/phpstan-webmozart-assert": "^1.2",
         "phpunit/phpunit": "^9.5.10",
+        "spatie/invade": "^1.1",
         "spatie/laravel-ignition": "^1.0",
         "symplify/easy-coding-standard": "^11.0"
     },
