--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "spatie/browsershot": "^3.57.1",
+        "spatie/fork": "^1.1",
         "symfony/dom-crawler": "^6.1"
     },
     "require-dev": {
