--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/tinker": "^2.7",
         "spatie/browsershot": "^3.57.1",
         "spatie/fork": "^1.1",
-        "symfony/dom-crawler": "^6.1"
+        "symfony/dom-crawler": "^6.1",
+        "league/flysystem-aws-s3-v3": "^3.2"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.12",
