--- a/composer.json
+++ b/composer.json
@@ -7,13 +7,14 @@
     "require": {
         "php": "^8.1.0",
         "guzzlehttp/guzzle": "^7.2",
+        "larabug/larabug": "^2.5",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
+        "league/flysystem-aws-s3-v3": "^3.2",
         "spatie/browsershot": "^3.57.1",
         "spatie/fork": "^1.1",
-        "symfony/dom-crawler": "^6.1",
-        "league/flysystem-aws-s3-v3": "^3.2"
+        "symfony/dom-crawler": "^6.1"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.12",
