--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,14 @@
         "livewire/livewire": "^2.5",
         "spatie/browsershot": "^3.57.1",
         "spatie/fork": "^1.1",
+        "spatie/laravel-query-builder": "^5.0",
         "symfony/dom-crawler": "^6.1"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.7",
         "barryvdh/laravel-ide-helper": "^2.12",
         "fakerphp/faker": "^1.9.1",
+        "jasonmccreary/laravel-test-assertions": "^2.1",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
