--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1.0",
+        "awssat/discord-notification-channel": "^1.4",
         "guzzlehttp/guzzle": "^7.2",
         "larabug/larabug": "^2.5",
         "laravel/framework": "^9.19",
@@ -15,9 +16,11 @@
         "laravel/tinker": "^2.7",
         "league/flysystem-aws-s3-v3": "^3.2",
         "livewire/livewire": "^2.5",
+        "propaganistas/laravel-phone": "^4.3",
         "spatie/browsershot": "^3.57.1",
         "spatie/fork": "^1.1",
         "spatie/laravel-query-builder": "^5.0",
+        "spatie/laravel-queueable-action": "^2.14",
         "symfony/dom-crawler": "^6.1"
     },
     "require-dev": {
