--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "propaganistas/laravel-phone": "^4.3",
         "spatie/browsershot": "^3.57.1",
         "spatie/fork": "^1.1",
+        "spatie/laravel-model-states": "^2.4",
         "spatie/laravel-query-builder": "^5.0",
         "spatie/laravel-queueable-action": "^2.14",
         "symfony/dom-crawler": "^6.1"
