--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/tinker": "^2.7",
         "league/flysystem-aws-s3-v3": "^3.2",
         "livewire/livewire": "^2.5",
+        "predis/predis": "^2.0",
         "propaganistas/laravel-phone": "^4.3",
         "spatie/browsershot": "^3.57.1",
         "spatie/fork": "^1.1",
