--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -21,8 +21,8 @@
         <env name="APP_ENV" value="testing"/>
         <env name="BCRYPT_ROUNDS" value="4"/>
         <env name="CACHE_DRIVER" value="file"/>
-<!--         <env name="DB_CONNECTION" value="sqlite"/>-->
-<!--         <env name="DB_DATABASE" value=":memory:"/>-->
+         <env name="DB_CONNECTION" value="sqlite"/>
+         <env name="DB_DATABASE" value=":memory:"/>
         <env name="MAIL_MAILER" value="smtp"/>
         <env name="QUEUE_CONNECTION" value="sync"/>
         <env name="SESSION_DRIVER" value="array"/>
