--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/framework": "^9.19",
         "laravel/horizon": "^5.10",
         "laravel/jetstream": "^2.11",
+        "laravel/octane": "^1.3",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "league/flysystem-aws-s3-v3": "^3.2",
@@ -23,6 +24,7 @@
         "spatie/laravel-model-states": "^2.4",
         "spatie/laravel-query-builder": "^5.0",
         "spatie/laravel-queueable-action": "^2.14",
+        "spiral/roadrunner": "^2.8.2",
         "symfony/dom-crawler": "^6.1"
     },
     "require-dev": {
