--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/jetstream": "^2.11",
         "laravel/octane": "^1.3",
         "laravel/sanctum": "^3.0",
+        "laravel/telescope": "^4.9",
         "laravel/tinker": "^2.7",
         "league/flysystem-aws-s3-v3": "^3.2",
         "livewire/livewire": "^2.5",
