--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.1.0",
         "awssat/discord-notification-channel": "^1.4",
         "azjezz/psl": "^2.1",
+        "filament/filament": "^2.0",
         "guzzlehttp/guzzle": "^7.2",
         "larabug/larabug": "^2.5",
         "laravel/framework": "^9.19",
